--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   
   # Core
   equatable: ^2.0.3
+  flutter_screenutil: ^5.5.3+2
   
   # Network
   dio: ^4.0.6
@@ -29,6 +30,8 @@ dependencies:
   json_serializable: ^6.2.0
   json_annotation: ^4.5.0
 
+  # Teheme
+  flex_color_scheme: ^5.0.1
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
